error.txt
 gcc -O0 c_code/spectre_1.c -o spectre_1_x86
/usr/bin/ld: /usr/lib/gcc/x86_64-linux-gnu/9/../../../x86_64-linux-gnu/Scrt1.o: in function `_start':
(.text+0x24): undefined reference to `main'
collect2: error: ld returned 1 exit status



 gcc -O0 inception.c -o inception_x86
inception.c: In function ‘main’:
inception.c:53:5: error: asm-specifier for variable ‘gadget’ conflicts with asm clobber list
   53 |     __asm__ __volatile__(
      |     ^~~~~~~
inception.c:53:5: error: asm-specifier for variable ‘secret’ conflicts with asm clobber list




gcc -O0 l1tf.c -o l1tf
l1tf.c: In function ‘main’:
l1tf.c:36:16: warning: passing argument 1 of ‘munmap’ discards ‘volatile’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   36 |         munmap(g_l1tf_secret_page, page_size);
      |                ^~~~~~~~~~~~~~~~~~
In file included from utils.c:9,
                 from l1tf.c:1:
/usr/include/x86_64-linux-gnu/sys/mman.h:76:26: note: expected ‘void *’ but argument is of type ‘volatile uint8_t *’ {aka ‘volatile unsigned char *’}
   76 | extern int munmap (void *__addr, size_t __len) __THROW;
      |                    ~~~~~~^~~~~~
l1tf.c:64:20: warning: passing argument 1 of ‘munmap’ discards ‘volatile’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   64 |             munmap(g_l1tf_secret_page, page_size);
      |                    ^~~~~~~~~~~~~~~~~~
In file included from utils.c:9,
                 from l1tf.c:1:
/usr/include/x86_64-linux-gnu/sys/mman.h:76:26: note: expected ‘void *’ but argument is of type ‘volatile uint8_t *’ {aka ‘volatile unsigned char *’}
   76 | extern int munmap (void *__addr, size_t __len) __THROW;
      |                    ~~~~~~^~~~~~
l1tf.c:71:12: warning: passing argument 1 of ‘munmap’ discards ‘volatile’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   71 |     munmap(g_l1tf_secret_page, page_size);
      |            ^~~~~~~~~~~~~~~~~~
In file included from utils.c:9,
                 from l1tf.c:1:
/usr/include/x86_64-linux-gnu/sys/mman.h:76:26: note: expected ‘void *’ but argument is of type ‘volatile uint8_t *’ {aka ‘volatile unsigned char *’}
   76 | extern int munmap (void *__addr, size_t __len) __THROW;